add logic to app-icon

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/control/control.component.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/control/control.component.html
@@ -3,7 +3,7 @@
     <div class="player">
       <div class="player__name player--cross">
         <svg width="30">
-          <use xlink:href="assets/sprite.svg#x"></use>
+          <use xlink:href="assets/sprite.svg#cross"></use>
       </svg>
       <h1>Player 1</h1>
       </div>
