--- a/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/move/move.component.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/move/move.component.html
@@ -1,6 +1,4 @@
 <div class="app-move__container">
-  <svg width="35" class="icon-opacity">
-      <use [attr.xlink:href]="icon"></use>
-</svg>
+    <app-icon [player]="player" [iconSize]="iconSize"></app-icon>
     <p class="app-move__text">Player {{player}} Turn</p>
 </div>
