added icon logic

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/app.component.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/app.component.html
@@ -1,10 +1,8 @@
 <header class="header">
-    <svg width="25">
-        <use xlink:href="assets/sprite.svg#logo"></use>
-    </svg>
+    <app-icon [iconSize]="iconSize" [icon]="icon"></app-icon>
     <h1 class="header__title">Tic-Tac-Toe Game</h1>
 </header>
-<app-move class="app-move"></app-move>
+<app-move></app-move>
 <app-control></app-control>
 
 
