--- a/homeworks/ihor.kropyvnyi_20-Igorek-21/13-form/src/app/components/input-password/input-password.component.css
+++ b/homeworks/ihor.kropyvnyi_20-Igorek-21/13-form/src/app/components/input-password/input-password.component.css
@@ -19,3 +19,8 @@
 .input__has-error {
   border: 2px solid #FF0303;
 }
+
+.button__show-password:hover,
+.button__show-password:focus {
+  opacity: .7;
+}
