--- a/homeworks/ihor.kropyvnyi_20-Igorek-21/13-form/src/app/components/input-password/input-password.component.html
+++ b/homeworks/ihor.kropyvnyi_20-Igorek-21/13-form/src/app/components/input-password/input-password.component.html
@@ -1,3 +1,16 @@
+<svg style="visibility: hidden; width: 0; height: 0;">
+  <symbol id="show-icon" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+          stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"/>
+    <circle cx="12" cy="12" r="3"/>
+  </symbol>
+  <symbol id="hide-icon" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+          viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+    <path
+      d="M18 18a10 10 0 0 1-6 2c-7 0-11-8-11-8a18 18 0 0 1 5-6m4-2a9 9 0 0 1 2 0c7 0 11 8 11 8a19 19 0 0 1-2 3m-7-1a3 3 0 1 1-4-4M1 1l22 22"/>
+  </symbol>
+</svg>
+
 <input class="field-input__input"
        [(ngModel)]="value"
        [type]="inputType"
@@ -11,6 +24,6 @@
         (click)="showPassword()"
         type="button">
   <svg width="20px" height="20px">
-    <use [attr.href]="'../assets/svg/sprites.svg#'+ inputTypeIcon +'-icon'"></use>
+    <use [attr.href]="'#'+ inputTypeIcon +'-icon'"></use>
   </svg>
 </button>
