the ngneat/reactive-forms library is installed and typed custom form controls. svg password replaced

--- a/homeworks/ihor.kropyvnyi_20-Igorek-21/13-form/src/app/components/input-password/input-password.component.css
+++ b/homeworks/ihor.kropyvnyi_20-Igorek-21/13-form/src/app/components/input-password/input-password.component.css
@@ -20,7 +20,6 @@
   border: 2px solid #FF0303;
 }
 
-.button__show-password:hover,
-.button__show-password:focus {
+.button__show-password:hover {
   opacity: .7;
 }
