--- a/homeworks/ihor.kropyvnyi_20-Igorek-21/13-form/src/app/components/login-page/login-page.component.html
+++ b/homeworks/ihor.kropyvnyi_20-Igorek-21/13-form/src/app/components/login-page/login-page.component.html
@@ -22,7 +22,7 @@
 
         <app-input-password class="login-form__field-input"
                             [validateStyle]="controls.password.errors && controls.password.touched"
-                            [validateShowPassword]="controls.password.value"
+                            [validateShowPassword]="controls.passwordIcon.value"
                             formControlName="loginPassword">
         </app-input-password>
 
