--- a/homeworks/ihor.kropyvnyi_20-Igorek-21/13-form/src/app/components/input-password/input-password.component.html
+++ b/homeworks/ihor.kropyvnyi_20-Igorek-21/13-form/src/app/components/input-password/input-password.component.html
@@ -1,3 +1,16 @@
+<svg style="visibility: hidden; width: 0; height: 0;">
+  <symbol id="hide-icon" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16">
+    <path d="m10.79 12.912-1.614-1.615a3.5 3.5 0 0 1-4.474-4.474l-2.06-2.06C.938 6.278 0 8 0 8s3 5.5 8 5.5a7.029 7.029 0 0 0 2.79-.588zM5.21 3.088A7.028 7.028 0 0 1 8 2.5c5 0 8 5.5 8 5.5s-.939 1.721-2.641 3.238l-2.062-2.062a3.5 3.5 0 0 0-4.474-4.474L5.21 3.089z"/>
+    <path d="M5.525 7.646a2.5 2.5 0 0 0 2.829 2.829l-2.83-2.829zm4.95.708-2.829-2.83a2.5 2.5 0 0 1 2.829 2.829zm3.171 6-12-12 .708-.708 12 12-.708.708z"/>
+  </symbol>
+  <symbol id="show-icon" viewBox="0 0 22 16" xmlns="http://www.w3.org/2000/svg">
+    <g fill="none" fill-rule="evenodd">
+      <path d="M-1-4h24v24H-1z"/>
+      <path d="M11 .5C6 .5 1.7 3.6 0 8a11.8 11.8 0 0 0 22 0C20.3 3.6 16 .5 11 .5ZM11 13a5 5 0 1 1 0-10 5 5 0 0 1 0 10Zm0-8a3 3 0 1 0 0 6 3 3 0 0 0 0-6Z" fill="#1D1D1D"/>
+    </g>
+  </symbol>
+</svg>
+
 <input class="field-input__input"
        [(ngModel)]="value"
        [type]="inputType"
@@ -11,6 +24,6 @@
         (click)="showPassword()"
         type="button">
   <svg width="20px" height="20px">
-    <use [attr.href]="'../assets/svg/sprites.svg#'+ inputTypeIcon +'-icon'"></use>
+    <use [attr.href]="'#'+ inputTypeIcon +'-icon'"></use>
   </svg>
 </button>
