added icon component

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/field/field.component.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/field/field.component.html
@@ -1,7 +1,7 @@
-<!--div class="field">
+<div class="field">
   <app-square
     *ngFor="let square of fieldsquares; let i=index"
     [player]="square"
     (click)="move(i)"
   ></app-square>
-</div-->
+</div>
