--- a/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/icon/icon.component.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/icon/icon.component.html
@@ -1,3 +1,4 @@
 <svg [attr.width]="iconSize" class="icon-opacity">
+    <use [attr.xlink:href]="sprite+iconType"></use>
     <use [attr.xlink:href]="sprite+icon"></use>
 </svg>
