--- a/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/control/control.component.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/control/control.component.html
@@ -5,5 +5,6 @@
     <!--button type="button" class="reset-button reset-button--current-game" (click)="currentReset()">Reset Current Game</button>
     <button type="button" class="reset-button reset-button--all" (click)="resetAll()">Reset All</button-->
   </div>
-    <!--app-field (getScore)="changeCount($event)"></app-field-->
+    <app-field></app-field>
+    <!--(getScore)="changeCount($event)"-->
 </section>
