--- a/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/field/square/square.component.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/field/square/square.component.html
@@ -1,7 +1,6 @@
-<!--button type="button" class="field__button"
+<button type="button" class="field__button"
 [ngClass]="{'field__square--cross': player===1, 'field__square--zero': player===2}">
-  <svg width="65" class="icon-opacity">
-    <use [attr.xlink:href]="sprite+icon"></use>
-  </svg>
-  <app-icon [player]="player" [iconSize]="iconSize"></app-icon>
-</button-->
+  <app-icon [iconSize]="iconSize" [player]="player"></app-icon>
+</button>
+
+
