--- a/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/move/move.component.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/move/move.component.html
@@ -1,4 +1,4 @@
-<!--div class="app-move__container">
+<div class="app-move__container">
     <app-icon [player]="player" [iconSize]="iconSize"></app-icon>
     <p class="app-move__text">Player {{player}} Turn</p>
-</div-->
+</div>
