--- a/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/control/control.component.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/control/control.component.html
@@ -1,10 +1,9 @@
 <section class="game-container">
   <div>
-    <app-player class="player-info player--cross" [iconSize]="iconSize" [icon]="iconCross" [player]="playerOne"></app-player>
-    <app-player class="player-info player--zero" [iconSize]="iconSize" [icon]="iconZero" [player]="playerTwo"></app-player>
+    <app-player class="player-info player--cross" [iconSize]="iconSize" [icon]="iconCross" [player]="playerOne" [countPlayer]="this.scoreService.countPlayerOne"></app-player>
+    <app-player class="player-info player--zero" [iconSize]="iconSize" [icon]="iconZero" [player]="playerTwo" [countPlayer]="this.scoreService.countPlayerTwo"></app-player>
     <button type="button" (click)="currentReset()" class="reset-button reset-button--current-game">Reset Current Game</button>
-    <button type="button" class="reset-button reset-button--all">Reset All</button>
+    <button type="button" (click)="resetAll()" class="reset-button reset-button--all">Reset All</button>
   </div>
     <app-field></app-field>
-    <!--(getScore)="changeCount($event)"-->
 </section>
