--- a/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/player/player.component.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/player/player.component.html
@@ -4,6 +4,6 @@
     <h1>Player {{player}}</h1>
     </div>
     <div class="player__score">
-      <!--p>{{countPlayerOne}}</p-->
+      <p>{{countPlayer}}</p>
     </div>
 </div>
