fix form styles

--- a/homeworks/konstantin.rusenko_ConstantinRusenko/13-forms/forms/src/app/components/form-elements/password-input/password-input.component.html
+++ b/homeworks/konstantin.rusenko_ConstantinRusenko/13-forms/forms/src/app/components/form-elements/password-input/password-input.component.html
@@ -22,7 +22,7 @@
             (input)="changed(inp.value)"
             (blure)="touched()">
 
-        <button type="button" class="toggle-password-visibility-button"
+        <button type="button" class="toggle-password-visibility-button button"
             [title]="passwordFieldType === 'text'
                 ? 'Hide password'
                 : 'Show password'"
