--- a/homeworks/konstantin.rusenko_ConstantinRusenko/13-forms/forms/src/app/components/regestration-form/registration-form.component.html
+++ b/homeworks/konstantin.rusenko_ConstantinRusenko/13-forms/forms/src/app/components/regestration-form/registration-form.component.html
@@ -9,6 +9,7 @@
         </h1>
 
         <app-input
+            class="form-input"
             [parentForm]="registrationForm"
             fieldName="name"
             label="Name"
@@ -16,6 +17,7 @@
         </app-input>
 
         <app-input
+            class="form-input"
             [parentForm]="registrationForm"
             fieldName="email"
             label="Email"
@@ -23,20 +25,23 @@
         </app-input>
 
         <app-password-input
+            class="form-input"
             [parentForm]="registrationForm"
             fieldName="password"
             label="Password"
             formControlName="password"> 
         </app-password-input>
 
-        <div>
-            <input type="checkbox" formControlName="rememberLoginControl" (change)="toggleRemember()">
+        <div class="registration-remember-wrapper">
+            <input class="remember-login-control" type="checkbox" formControlName="rememberLoginControl" (change)="toggleRemember()">
+            <p>Remember me</p>
         </div>
 
         <div class="button-row">
             <button class="button-submit" type="submit"
-                [disabled]="registrationForm?.invalid">
-                Submit
+                [disabled]="registrationForm?.invalid"
+                [ngClass]="{'button': registrationForm?.invalid === false}">
+                Sign Up
             </button>
         </div>
     </form>
