--- a/homeworks/konstantin.rusenko_ConstantinRusenko/13-forms/forms/src/app/components/form-elements/field-errors/field-errors.component.html
+++ b/homeworks/konstantin.rusenko_ConstantinRusenko/13-forms/forms/src/app/components/form-elements/field-errors/field-errors.component.html
@@ -5,17 +5,17 @@
     </span>
 
     <span class="field-error"
-        *ngIf="formField?.hasError( 'noEmptyString' )">
-        Please enter a valid name.
-    </span>
-
-    <span class="field-error"
-        *ngIf="formField?.hasError( 'normalEmailRule' )">
+        *ngIf="formField?.hasError( 'email' )">
         Email format is invalid.
     </span>
 
     <span class="field-error"
-        *ngIf="formField?.hasError( 'noWhitespaceRequired' )">
-        No spaces allowed
+        *ngIf="formField?.hasError( 'maxlength' )">
+        Max length 12 symblos
+    </span>
+
+    <span class="field-error"
+        *ngIf="formField?.hasError( 'minlength' )">
+        Min length 6 symblos
     </span>
 </ng-container>
