aded mobile version

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/field/square/square.component.css
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/field/square/square.component.css
@@ -21,3 +21,11 @@
   justify-content: center;
   align-items: center;
 }
+
+@media (max-width:500px) {
+
+  .field__button {
+    width: 90px;
+    height: 90px;
+  }
+}
