--- a/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/styles.css
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/styles.css
@@ -6,3 +6,11 @@
 .icon-opacity {
   fill: transparent;
 }
+
+@media (max-width: 500px) {
+
+  .icon-size--mobile {
+    width: 40px;
+    height: 40px;
+  }
+}
