add enum file in folder, fixed icon size

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/app.component.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/app.component.html
@@ -1,11 +1,6 @@
 <header class="header">
-    <app-icon [iconSize]="iconSize" [icon]="icon"></app-icon>
+    <app-icon [size]="iconSize" [icon]="icon"></app-icon>
     <h1 class="header__title">Tic-Tac-Toe Game</h1>
 </header>
 <app-move></app-move>
 <app-control></app-control>
-
-
-
-
-
