--- a/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/app.component.css
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/app.component.css
@@ -1,9 +1,8 @@
 .header {
   display: flex;
   background: #A5D9F6;
-  height: 56px;
   align-items: center;
-  padding-left: 25px;
+  padding: 16px 35px;
   box-shadow: 0 4px 5px rgba(0, 0, 0, .14), 0 1px 10px rgba(0, 0, 0, .12), 0 2px 4px rgba(0, 0, 0, .2);
 }
 
@@ -13,4 +12,3 @@
   font-family: "Roboto", sans-serif;
   margin-left: 25px;
 }
-
