--- a/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/field/square/square.component.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/field/square/square.component.html
@@ -1,6 +1,6 @@
 <button type="button" class="field__button"
 [ngClass]="{'field__square--cross': player===1, 'field__square--zero': player===2}">
-  <app-icon [iconSize]="iconSize" [player]="player"></app-icon>
+  <app-icon [size]="iconSize" [player]="player"></app-icon>
 </button>
 
 
