--- a/homeworks/nikolay.krasniuk_Kingstar22/12-http/src/app/component/todo-list/todo-list.component.html
+++ b/homeworks/nikolay.krasniuk_Kingstar22/12-http/src/app/component/todo-list/todo-list.component.html
@@ -1,59 +1,31 @@
-<div class="todo__item test-{{todo.isDone}}" *ngIf="!editItem">
-    <label class="todo__item-label">
-        <input
-            type="checkbox"
-            [checked]="todo.isDone"
-            class="todo__item-checkbox "
-            (click)="onChange($event, todo)"
-        >
-        <del *ngIf="todo.isDone"><span>{{todo.text}}</span></del>
-        <span *ngIf="!todo.isDone">{{todo.text}}</span>
-    </label>
-    <div>
+<main class="todo">
+    <div class="todo-wrapper">
         <button
             type="button"
-            (click)="clickEdit()"
-            class="todo__item-btn">
-            <svg class="todo__icon">
-                <use class="todo__icon-edit" xlink:href="/assets/sprite.svg#pencil"></use>
-            </svg>
-        </button>
-        <button
-            type="button"
-            (click)="getId(todo.id)"
-            class="todo__item-btn">
-            <svg class="todo__icon">
-                <use class="todo__icon-del" xlink:href="/assets/sprite.svg#trash"></use>
-            </svg>
-        </button>
-    </div>
-</div>
-
-<div *ngIf="editItem" class="todo__item">
-    <label class="todo__item-label">
-        <input
-            type="text"
-            class="todo__item-input"
-            [(ngModel)]="text"
-        >
-    </label>
-    <div>
-        <button
-            type="button"
-            [disabled]="!text"
-            (click)="getEditItem()"
-            class="todo__item-btn">
-            <svg class="todo__icon">
-                <use class="todo__icon-edit" xlink:href="/assets/sprite.svg#check"></use>
-            </svg>
-        </button>
-        <button
-            type="button"
-            (click)="clickEdit()"
-            class="todo__item-btn">
+            (click)="logOut()"
+            routerLink=""
+            class="todo__btn">
             <svg class="todo__icon">
                 <use class="todo__icon-del" xlink:href="/assets/sprite.svg#cancel"></use>
             </svg>
         </button>
+        <section class="todo__new">
+            <label class="todo__new-label">
+                New Todo:
+                <input class="todo__new-input" type="text" [(ngModel)]="todoText"/>
+            </label>
+            <button class="todo__new-btn" type="submit" (click)="addTodoItem()">Add</button>
+            <button class="todo__read-btn" type="submit" (click)="getTodoList()">Read</button>
+        </section>
+        <div class="todo__item">
+            <app-todo-item
+                *ngFor="let todo of todos"
+                [todo]="todo"
+                (clickBtn)="removeTodoItem($event)"
+                (changeTodo)="changeTodoItemStatus($event)"
+                (editTodoItem)="updateTodoItem($event, todo.id)"
+            ></app-todo-item>
+        </div>
     </div>
-</div>
+</main>
+
