--- a/homeworks/nikolay.krasniuk_Kingstar22/12-http/src/app/app.component.html
+++ b/homeworks/nikolay.krasniuk_Kingstar22/12-http/src/app/app.component.html
@@ -1,22 +1,1 @@
-<main class="todo">
-    <div class="todo-wrapper">
-        <section class="todo__new">
-            <label class="todo__new-label">
-                New Todo:
-                <input class="todo__new-input" type="text" [(ngModel)]="todoText"/>
-            </label>
-            <button class="todo__new-btn" type="submit" (click)="addTodoItem()">Add</button>
-            <button class="todo__read-btn" type="submit" (click)="getTodoList()">Read</button>
-        </section>
-        <div class="todo__item">
-            <app-todo-list
-                *ngFor="let todo of todos"
-                [todo]="todo"
-                (clickBtn)="removeTodoItem($event)"
-                (changeTodo)="changeTodoItemStatus($event)"
-                (editTodoItem)="updateTodoItem($event, todo.id)"
-            ></app-todo-list>
-        </div>
-    </div>
-</main>
-
+<router-outlet></router-outlet>
