--- a/homeworks/nikolay.krasniuk_Kingstar22/12-http/src/styles.css
+++ b/homeworks/nikolay.krasniuk_Kingstar22/12-http/src/styles.css
@@ -9,3 +9,22 @@ body {
   background: rgba(161, 227, 236, .25);
 }
 
+.form__item-input {
+  width: 100%;
+  height: 30px;
+  margin-top: 5px;
+  padding: 10px;
+  border-radius: 5px;
+  outline: none;
+  border: none;
+}
+
+.form__item-input.error {
+  background: rgba(253, 192, 192, .56);
+}
+
+.validation {
+  margin-top: 5px;
+  color: #F00F;
+  font-size: 15px;
+}
