added components and services folder, rename move component

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/app.component.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/app.component.html
@@ -2,5 +2,5 @@
     <app-icon [size]="iconSize" [icon]="icon"></app-icon>
     <h1 class="header__title">Tic-Tac-Toe Game</h1>
 </header>
-<app-move></app-move>
+<app-player-turn></app-player-turn>
 <app-control></app-control>
