renamed control component, add 2 getters, renamed claases according to BEM

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/app.component.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/app.component.html
@@ -3,4 +3,4 @@
     <h1 class="header__title">Tic-Tac-Toe Game</h1>
 </header>
 <app-player-turn></app-player-turn>
-<app-control></app-control>
+<app-score></app-score>
