--- a/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/components/score/score.component.css
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/components/score/score.component.css
@@ -35,11 +35,11 @@
 }
 
 .reset-button--current-game {
-  padding: 20px;
+  padding: 18px;
 }
 
 .reset-button--all {
-  padding: 20px 62px;
+  padding: 18px 59px
 }
 
 
