--- a/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/components/square/square.component.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/components/square/square.component.html
@@ -1,7 +1,7 @@
 <button type="button" class="field__button"
-[ngClass]="{'field__square--cross': player===1, 'field__square--zero': player===2}">
+[ngClass]="''+squareColor">
   <app-icon [size]="iconSize" [player]="player"></app-icon>
-</button>
+ </button>
 
 
 
