added change of color i player-turn

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/components/player/player.component.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/components/player/player.component.html
@@ -1,6 +1,6 @@
 <div class="player">
     <div class="player__name">
-    <app-icon [size]="iconSize" [icon]="icon"></app-icon>
+    <app-icon [size]="30" [icon]="icon"></app-icon>
     <h1>Player {{player}}</h1>
     </div>
     <div class="player__score">
