--- a/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/components/player-turn/player-turn.component.css
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/components/player-turn/player-turn.component.css
@@ -1,10 +1,11 @@
-.app-move__container {
+.player-turn__container {
   display: flex;
   justify-content: space-around;
   align-items: center;
   margin-top: 60px;
   background: #A5D9F6;
-  width: 336px;
+  max-width: 336px;
+  width: 100%;
   height: 56px;
   margin-left: auto;
   margin-right: auto;
@@ -16,9 +17,10 @@
   font-weight: 700;
 }
 
-@media (max-width: 500px) {
+.player-turn--cross {
+  background-color: #A5D9F6;
+}
 
-  .app-move__container {
-    width: 300px;
-  }
+.player-turn--zero {
+  background-color: #A5A6F6;
 }
