--- a/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/components/player-turn/player-turn.component.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/components/player-turn/player-turn.component.html
@@ -1,4 +1,4 @@
-<div class="app-move__container">
+<div class="player-turn__container" [ngClass]="''+componentColor">
     <app-icon [player]="player" [size]="iconSize"></app-icon>
-    <p class="app-move__text">Player {{player}} Turn</p>
+    <p class="app-move__text">Player {{player$ | async}} Turn</p>
 </div>
