--- a/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/components/score/score.component.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/components/score/score.component.html
@@ -1,7 +1,7 @@
 <section class="game-container">
   <div>
-    <app-player class="player-info player-info--cross" [iconSize]="iconSize" [icon]="iconCross" [player]="playerOne" [countPlayer]="countPlayerOne"></app-player>
-    <app-player class="player-info player-info--zero" [iconSize]="iconSize" [icon]="iconZero" [player]="playerTwo" [countPlayer]="countPlayerTwo"></app-player>
+    <app-player class="player-info player-info--cross"  [icon]="iconCross" [player]="playerOne" [countPlayer]="countPlayerOne"></app-player>
+    <app-player class="player-info player-info--zero" [icon]="iconZero" [player]="playerTwo" [countPlayer]="countPlayerTwo"></app-player>
   <div class="game-container__button">
     <button type="button" (click)="currentReset()" class="reset-button reset-button--current-game">Reset Current Game</button>
     <button type="button" (click)="resetAll()" class="reset-button reset-button--all">Reset All</button>
