--- a/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/components/square/square.component.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/components/square/square.component.html
@@ -1,5 +1,5 @@
 <button type="button" class="field__button"
-[ngClass]="''+squareColor">
+[ngClass]="''+componentColor">
   <app-icon [size]="iconSize" [player]="player"></app-icon>
  </button>
 
