--- a/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/components/player-turn/player-turn.component.css
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/components/player-turn/player-turn.component.css
@@ -11,7 +11,7 @@
   margin-right: auto;
 }
 
-.app-move__text {
+.player-turn__text {
   color: #FFF;
   font-size: 30px;
   font-weight: 700;
@@ -23,4 +23,8 @@
 
 .player-turn--zero {
   background-color: #A5A6F6;
+}
+
+.player-turn--draw {
+  background-color: #CA6565;
 }
