renamed dataService to gameService

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/components/field/field.component.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/components/field/field.component.html
@@ -1,6 +1,6 @@
 <div class="field">
   <app-square
-    *ngFor="let square of dataService.fieldsquares; let i=index"
+    *ngFor="let square of gameService.fieldsquares; let i=index"
     (click)="move(i)"
     [player]="square"
   ></app-square>
