--- a/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/components/square/square.component.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/components/square/square.component.html
@@ -1,6 +1,6 @@
 <button type="button" class="field__button"
 [ngClass]="''+componentColor">
-  <app-icon [size]="iconSize" [player]="player"></app-icon>
+  <app-player-icon [size]="100" [player]="player"></app-player-icon>
  </button>
 
 
