--- a/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/components/player-icon/player-icon.component.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/components/player-icon/player-icon.component.html
@@ -1,3 +1,3 @@
 <svg [attr.width]="size" [attr.height]="size" class="icon-opacity icon-size--mobile">
-    <use [attr.xlink:href]="sprite+icon"></use>
+    <use [attr.xlink:href]="sprite+iconType"></use>
 </svg>
