--- a/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/components/field/field.component.css
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/components/field/field.component.css
@@ -1,15 +1,7 @@
 .field {
   display: grid;
-  grid-template-columns: repeat(3, 110px);
-  grid-template-rows: repeat(3, 110px);
-  column-gap: 15px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  column-gap: 5px;
   row-gap: 5px;
-}
-
-@media (max-width:500px) {
-
-  .field {
-    width: 300px;
-    height: 300px;
-  }
 }
