add name search service

--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/11-directives/directives-app/src/app/app.component.html
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/11-directives/directives-app/src/app/app.component.html
@@ -1,9 +1,4 @@
-<div class="app-root-container">
-  <ul class="game-field__row" >
-    <li *ngFor="let field of cards; index as index;">
-    </li>
+  <ul class="list" >
+      <app-card></app-card>
   </ul>
-  <app-card></app-card>
-</div>
-
 
