add recursion to find duration time

--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/11-directives/directives-app/src/app/components/card/card.component.html
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/11-directives/directives-app/src/app/components/card/card.component.html
@@ -9,7 +9,7 @@
       class="recipe__ingredients"><span>Ingredients:</span><span>{{ card.ingredients | names }}</span></div>
     <div class="recipe__time-cook">
       <span>Time to cook:</span>
-      <span class="recipe__time-cook--number">75</span>
+      <span class="recipe__time-cook--number">{{ card.method | duration }}</span>
       <span>minutes</span>
     </div>
   </div>
