--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/11-directives/directives-app/src/app/components/card/card.component.css
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/11-directives/directives-app/src/app/components/card/card.component.css
@@ -1,3 +1,19 @@
+.list {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+  flex-direction: row;
+  min-width: 360px;
+  max-width: 100%;
+  margin: auto;
+  padding: 0;
+}
+
+.list__item {
+  margin: 10px;
+}
+
 .recipe {
   position: relative;
   display: flex;
@@ -26,11 +42,10 @@
 .recipe__name, .recipe__description {
   margin: 0;
   padding: 5px;
-  font-size: 22px;
   font-weight: 400;
 }
 
-.recipe__description, .recipe__food-pairing, .recipe__ingredients, .recipe__time-cook {
+.recipe__food-pairing-title, .recipe__ingredients-title, .recipe__time-cook {
   padding: 5px;
   font-size: 18px;
 }
