--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/11-directives/directives-app/src/app/components/card/card.component.html
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/11-directives/directives-app/src/app/components/card/card.component.html
@@ -1,7 +1,11 @@
 <ul class="list" >
 <li *ngFor="let card of cards;" class="list__item recipe">
-  <div class="recipe__stick"  [style.border-bottom-color]="stickerColor">{{cookSpeed}}</div>
-  <div><img class="recipe__image" src="#" alt="dish image" width="150px" height="150px"></div>
+  <svg height="90" width="90" class="recipe__stick">
+    <polygon points="10,0 40,0 90,50 90,80" [appHighlight]="color" curCompDuration="{{card.method | duration}}"/>
+    Sorry, your browser does not support inline SVG.
+    <text x="15" y="15" fill="black" transform="rotate(45 20,40)">{{card.method | speedTest}}</text>
+  </svg>
+  <div><img class="recipe__image" src="{{card.image_url}}" alt="dish image" width="50px" ></div>
   <div>
     <h1 class="recipe__name">{{card.name}}</h1>
     <h2 class="recipe__description">Description:</h2>
@@ -16,7 +20,9 @@
     </div>
     <div class="recipe__time-cook-el">
       <span class="recipe__time-cook-title">Time to cook:</span>
-      <span class="recipe__time-cook-volume">{{ card.method | duration }}</span>
+      <span class="recipe__time-cook-volume" [appHighlight]="color" curCompDuration="{{card.method | duration}}">
+        {{ card.method | duration }}
+      </span>
       <span>minutes</span>
     </div>
   </div>
